--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Pour Rania</h1>
     <p>Mon amour pour toi est infini, et je voulais te le montrer d’une manière spéciale. Tu es la lumière de ma vie et j'ai hâte de partager encore plus de moments avec toi.</p>
-    <img src="mon-image.jpg" alt="Image pour Rania">
+    <img src="images (7).jpeg" alt="Image pour Rania">
 </body>
 </html>
