--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pour Rania</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        body { font-family: Miss Fajardose, sans-serif; text-align: center; padding: 20px; }
         h1 { color: #FF69B4; }
         img { max-width: 80%; height: auto; margin-top: 20px; }
     </style>
 </head>
 <body>
     <h1>Pour Rania</h1>
-    <p>Mon amour pour toi est infini, et je voulais te le montrer d’une manière spéciale. Tu es la lumière de ma vie et j'ai hâte de partager encore plus de moments avec toi.</p>
+    <p>Mon amour pour toi est infini, et je voulais te le montrer d’une manière spéciale. Tu es la lumière de ma vie et j'ai hâte de partager encore plus de moments avec toi.Je te dédie donc le poème suivant : </p>
     <img src="Fleur.jpeg" alt="Image pour Rania">
 </body>
 </html>
