--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lettre d'amour</title>
-    <link rel="stylesheet" href="style.css"> <!-- Lien vers le CSS que nous allons créer ensuite -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="envelope">
@@ -12,6 +12,8 @@
         <div class="letter">
             <h1>À toi, mon amour</h1>
             <p>Mon cœur, cette lettre est pour toi...</p>
+            <button class="btn" id="openThis">Ouvre cela</button>
+            <button class="btn" id="smallGift">Un petit cadeau</button>
         </div>
     </div>
 </body>
