--- a/index.html
+++ b/index.html
@@ -17,75 +17,106 @@
         </div>
     </div>
 
-    <!-- Code JavaScript pour ouvrir la nouvelle page et afficher le cœur -->
-    <script>
-    function showHeartPage() {
-        // Créer une nouvelle page vierge
-        const newWindow = window.open("", "_blank", "width=400,height=400");
+   <script>
+function showHeartPage() {
+    // Créer une nouvelle page vierge
+    const newWindow = window.open("", "_blank", "width=400,height=600");
 
-        // Ajouter le code HTML et CSS pour le cœur dans la nouvelle fenêtre
-        newWindow.document.write(`
-            <html>
-            <head>
-                <style>
-                    /* Fond de la nouvelle page */
-                    body {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        height: 100vh;
-                        margin: 0;
-                        background-color: #ffe6f2;
-                        overflow: hidden;
-                    }
+    // Ajouter le code HTML et CSS pour le cœur, le texte poétique, et le bouton dans la nouvelle fenêtre
+    newWindow.document.write(`
+        <html>
+        <head>
+            <style>
+                /* Fond de la nouvelle page */
+                body {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100vh;
+                    margin: 0;
+                    background-color: #ffe6f2;
+                    overflow: hidden;
+                    font-family: Arial, sans-serif;
+                }
 
-                    /* Style du cœur */
-                    .heart {
-                        position: relative;
-                        width: 100px;
-                        height: 90px;
-                        background-color: #ff69b4;
-                        transform: rotate(-45deg);
-                        animation: drawHeart 3s ease forwards;
-                    }
+                /* Style du cœur */
+                .heart {
+                    position: relative;
+                    width: 100px;
+                    height: 90px;
+                    background-color: #ff69b4;
+                    animation: drawHeart 3s ease forwards;
+                }
 
-                    .heart::before,
-                    .heart::after {
-                        content: "";
-                        position: absolute;
-                        width: 100px;
-                        height: 100px;
-                        background-color: #ff69b4;
-                        border-radius: 50%;
-                    }
+                .heart::before,
+                .heart::after {
+                    content: "";
+                    position: absolute;
+                    width: 100px;
+                    height: 100px;
+                    background-color: #ff69b4;
+                    border-radius: 50%;
+                }
 
-                    .heart::before {
-                        top: -50px;
-                        left: 0;
-                    }
+                .heart::before {
+                    top: -50px;
+                    left: 0;
+                }
 
-                    .heart::after {
-                        top: 0;
-                        left: 50px;
-                    }
+                .heart::after {
+                    top: 0;
+                    left: 50px;
+                }
 
-                    /* Animation pour dessiner le cœur progressivement */
-                    @keyframes drawHeart {
-                        from {
-                            transform: scale(0);
-                        }
-                        to {
-                            transform: scale(1);
-                        }
+                /* Animation pour dessiner le cœur progressivement */
+                @keyframes drawHeart {
+                    from {
+                        transform: scale(0);
                     }
-                </style>
-            </head>
-            <body>
-                <div class="heart"></div>
-            </body>
-            </html>
-        `);
-    }
-    </script>
-</body>
-</html>
+                    to {
+                        transform: scale(1);
+                    }
+                }
+
+                /* Style du texte poétique */
+                .poem {
+                    margin-top: 20px;
+                    font-size: 18px;
+                    color: #ff69b4;
+                    text-align: center;
+                    max-width: 80%;
+                }
+
+                /* Style du bouton */
+                .btn {
+                    display: inline-block;
+                    margin-top: 20px;
+                    padding: 10px 20px;
+                    font-size: 16px;
+                    color: #fff;
+                    background-color: #ff69b4;
+                    border: none;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    transition: background-color 0.3s ease;
+                    text-decoration: none;
+                }
+
+                .btn:hover {
+                    background-color: #ff1493;
+                }
+            </style>
+        </head>
+        <body>
+            <div class="heart"></div>
+            <div class="poem">"Ton sourire est un soleil qui réchauffe mon âme,<br>
+            Ta voix, une mélodie qui apaise mon cœur,<br>
+            Et chaque moment passé à tes côtés est un trésor inestimable.<br>
+            Je t'aime plus que les mots ne pourront jamais le dire."</div>
+            <a href="poems.html" class="btn">Voir tous mes poèmes</a>
+        </body>
+        </html>
+    `);
+}
+</script>
