--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   <script>
 function showHeartPage() {
-    const newWindow = window.open("", "_blank", "width=400,height=600");
+    // Ouvre la page dans un nouvel onglet
+    window.open("page-coeur.html", "_blank");
+}
 
     newWindow.document.write(`
         <html>
