--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@ function showHeartPage() {
         <body>
             <div class="heart"></div>
             <div class="poem">
-                "Ton sourire est un soleil qui réchauffe mon âme,<br>
-                Ta voix, une mélodie qui apaise mon cœur,<br>
-                Et chaque moment passé à tes côtés est un trésor inestimable.<br>
-                Je t'aime plus que les mots ne pourront jamais le dire."
+            Après quelques semaines de travail, je suis heureux de te présenter le fruit de mes efforts. J'ai appris de zéro à coder un site internet afin de te faire plaisir et référencer tout les poèmes que je t'ai écrit et ceux que je t'écrirais. Je parle au futur car notre histoire est loin d'être finie ni même réellement commencée. Elle a connu un petit arrêt afin qu'elle puisse mieux commencer. Quand on sera mariés إِنْ شَاءَ ٱللَّٰهُ tu verras tout l'amour, les petites et grandes attentions que j'ai prévues pour toi. Toutes les recherches, les préparations de plans ou de vacances à deux que j'ai rêvées et organisées dans ma tête … Bref, tu verras combien je t'ai portée dans mon cœur, dans mon âme et jusqu'à dans ma chair tout ces mois et toutes ces années. Et j'espère que tu te diras que ça valait le coup de m'avoir laissée la chance d'espérer t'avoir à mes côtés. J'aimerais finir ce texte en te réitérant mon amour sans faille que je te porte, un amour si profond que je le vois manifesté partout dans la vie … Chaque fleur qui pousse m'évoque les sentiments grandissants dans mon cœur. Les étoiles scintillantes constituent des phares pour les hommes dans la nuit, tout comme ton souvenir rappelle à mon âme que l'homme n'a pas été crée seul : " C'est Lui qui vous a créés d'une personne unique et Il a tiré de celle-ci son épouse pour qu'il trouve le repos en elle " (Al A'raf, verset 189). Je vois en toi une femme, une épouse et si Dieu le veut, la future mère de mes enfants. Mais je veux aussi rendre hommage à l'enfant que tu as été. J'aimerais la couvrir d'amour et lui témoigner de la considération. J'en prendra soin, c'est une promesse, et je te ferais vivre dans une paix qui te siéra parfaitement je l'espère. Je t'aime Rania <3
             </div>
             <a href="poems.html" class="btn">Voir tous mes poèmes</a>
         </body>
