--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@ function showHeartPage() {
             J'aimerais finir ce texte en te réitérant mon amour sans faille que je te porte, un amour si profond que je le vois manifesté partout dans la vie … <br>
             Chaque fleur qui pousse m'évoque les sentiments grandissants dans mon cœur. Les étoiles scintillantes constituent des phares pour les hommes dans la nuit, tout comme ton souvenir rappelle à mon âme que l'homme n'a pas été crée seul : <br>
               <br> هُوَ ٱلَّذِى خَلَقَكُم مِّن نَّفْسٍۢ وَٰحِدَةٍۢ وَجَعَلَ مِنْهَا زَوْجَهَا لِيَسْكُنَ إِلَيْهَا
-            " C'est Lui qui vous a créés d'une personne unique et Il a tiré de celle-ci son épouse pour qu'il trouve le repos en elle " (Al A'raf, verset 189). <br>
+            " C'est Lui qui vous a créés d'une personne unique et Il a tiré de celle-ci son épouse pour qu'il trouve le repos en elle " <br>
+            (Al A'raf, verset 189). <br>
             Je vois en toi une femme, une épouse et si Dieu le veut, la future mère de mes enfants. Mais je veux aussi rendre hommage à l'enfant que tu as été. J'aimerais la couvrir d'amour et lui témoigner de la considération. J'en prendrai soin, c'est une promesse, et je te ferais vivre dans une paix qui te siéra parfaitement je l'espère. <br>
-            Je t'aime Rania <3
+            Je t'aime Rania <3 </strong>
             </div>
             <a href="poems.html" class="btn">Voir mes poèmes dédiés à toi</a>
         </body>
