--- a/poem1.html
+++ b/poem1.html
@@ -4,14 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poème 1</title>
-    <link rel="stylesheet" href="style.css"> <!-- Reprend ton fichier CSS global -->
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
+    <style>
+        /* Styles spécifiques pour les pages de poèmes */
+        body {
+            background-color: #f5f5f5; /* Fond clair agréable */
+            color: #333; /* Couleur du texte pour un bon contraste */
+            font-family: 'Georgia', serif; /* Police élégante et adaptée à un poème */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        h1 {
+            font-weight: bold; /* Titre en gras */
+            margin-bottom: 20px; /* Espacement entre le titre et le texte */
+        }
+
+        p {
+            font-style: italic; /* Texte du poème en italique */
+            line-height: 1.6; /* Espacement des lignes pour améliorer la lisibilité */
+            text-align: center;
+            margin: 0 20px 30px; /* Marges latérales pour éviter les bords serrés */
+        }
+
+        a.btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #333; /* Bouton sombre */
+            color: #fff; /* Texte blanc */
+            text-decoration: none; /* Supprime le soulignement */
+            border-radius: 5px;
+            transition: background-color 0.3s ease; /* Animation pour le survol */
+        }
+
+        a.btn:hover {
+            background-color: #555; /* Couleur légèrement plus claire au survol */
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Au pied d'une feuille</h1>
-    </header>
-    <main>
-        <p>Dans une barque portée par le vent <br>
+    <h1>Au pied d'une feuille</h1> <!-- Titre du poème -->
+    <p> Dans une barque portée par le vent <br>
         Dans le souvenir préhistorique et les réminiscences du temps <br>
         Partout où je porte mon regard, je vois ton nom <br>
         Partout où je te regarde, je vois un don <br>
@@ -27,10 +65,8 @@
         Aidé par ton sourire pudique et ta beauté de paon <br>
 
         À destination de la femme que j'aime
-        </p>
-    </main>
-    <footer>
-        <a href="poems.html" class="btn">Retour à la liste des poèmes</a>
-    </footer>
+    </p>
+    <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
 </body>
 </html>
+
