--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     </div>
 
     <script>
-    function showHeartPage() {
-        // Ouvre une nouvelle page ergonomique et sobre
-        const newWindow = window.open("", "_blank");
+function showHeartPage() {
+    const newWindow = window.open("", "_blank");
 
-        newWindow.document.write(`
+    newWindow.document.write(`
         <!DOCTYPE html>
         <html lang="fr">
         <head>
@@ -30,7 +29,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Mon amour</title>
             <style>
-                /* Style général de la page */
+                /* Style général */
                 body {
                     display: flex;
                     flex-direction: column;
@@ -38,58 +37,57 @@
                     align-items: center;
                     height: 100vh;
                     margin: 0;
-                    background-color: #fdf6e3; /* Beige doux et romantique */
-                    overflow: hidden;
-                    font-family: 'Georgia', serif; /* Police élégante */
+                    background-color: #fef6f9; /* Rose pâle */
+                    font-family: 'Georgia', serif;
                 }
 
-                /* Cœur stylisé */
+                /* Style du cœur */
                 .heart {
                     position: relative;
-                    width: 150px;
-                    height: 150px;
-                    background-color: #e63946; /* Rouge passion mais sobre */
+                    width: 120px;
+                    height: 120px;
+                    background-color: #e63946; /* Rouge passion */
                     margin-bottom: 20px;
-                    transform: rotate(45deg); /* Symétrie corrigée */
+                    transform: rotate(0); /* Cœur bien droit */
                 }
 
-                .heart:before,
-                .heart:after {
+                .heart::before,
+                .heart::after {
                     content: "";
                     position: absolute;
-                    width: 150px;
-                    height: 150px;
+                    width: 120px;
+                    height: 120px;
                     background-color: #e63946;
                     border-radius: 50%;
                 }
 
-                .heart:before {
-                    top: -75px;
+                .heart::before {
+                    top: -60px;
                     left: 0;
                 }
 
-                .heart:after {
-                    left: 75px;
+                .heart::after {
+                    left: 60px;
                     top: 0;
                 }
 
-                /* Texte poétique */
+                /* Style du texte */
                 .poem {
-                    font-size: 18px;
-                    color: #2c3e50; /* Bleu-gris sobre */
-                    text-align: center;
-                    margin: 20px;
-                    line-height: 1.6;
+                    font-size: 16px; /* Texte plus petit */
+                    color: #2c3e50; /* Bleu-gris */
+                    text-align: left;
+                    margin: 10px 20px;
+                    line-height: 1.8; /* Espacement entre les lignes */
                 }
 
-                /* Bouton avec hover */
+                /* Style du bouton */
                 .btn {
                     display: inline-block;
-                    margin-top: 20px;
+                    margin-top: 10px; /* Plus près du texte */
                     padding: 10px 20px;
-                    font-size: 16px;
+                    font-size: 14px;
                     color: #fff;
-                    background-color: #457b9d; /* Bleu doux */
+                    background-color: #e91e63; /* Rose élégant */
                     border: none;
                     border-radius: 5px;
                     cursor: pointer;
@@ -99,31 +97,27 @@
                 }
 
                 .btn:hover {
-                    background-color: #1d3557; /* Couleur plus foncée au survol */
+                    background-color: #b0003a; /* Foncé au survol */
                 }
             </style>
         </head>
         <body>
             <div class="heart"></div>
             <div class="poem">
-                Après quelques semaines de travail, je suis heureux de te présenter le fruit de mes efforts. J'ai appris de zéro à coder un site internet afin de te faire plaisir et référencer tout les poèmes que je t'ai écrit et ceux que je t'écrirais. <br>
-            Je parle au futur car notre histoire est loin d'être finie ni même réellement commencée. Elle a connu un petit arrêt afin qu'elle puisse mieux commencer. Quand on sera mariés إِنْ شَاءَ ٱللَّٰهُ tu verras tout l'amour, les petites et grandes attentions que j'ai prévues pour toi. Toutes les recherches, les préparations de plans ou de vacances à deux que j'ai rêvées et organisées dans ma tête … Bref, tu verras combien je t'ai portée dans mon cœur, dans mon âme et jusqu'à dans ma chair tout ces mois et toutes ces années. Et j'espère que tu te diras que ça valait le coup de m'avoir laissée la chance d'espérer t'avoir à mes côtés. <br>
-            J'aimerais finir ce texte en te réitérant mon amour sans faille que je te porte, un amour si profond que je le vois manifesté partout dans la vie … <br>
+            Après quelques semaines de travail, je suis heureux de te présenter le fruit de mes efforts.<br>J'ai appris de zéro à coder un site internet afin de te faire plaisir et référencer tout les poèmes que je t'ai écrit et ceux que je t'écrirais. 
+            Je parle au futur car notre histoire est loin d'être finie ni même réellement commencée. Elle a connu un petit arrêt afin qu'elle puisse mieux commencer.<br>Quand on sera mariés إِنْ شَاءَ ٱللَّٰهُ tu verras tout l'amour, les petites et grandes attentions que j'ai prévues pour toi. Toutes les recherches, les préparations de plans ou de vacances à deux que j'ai rêvées et organisées dans ma tête …<br> Bref, tu verras combien je t'ai portée dans mon cœur, dans mon âme et jusqu'à dans ma chair tout ces mois et toutes ces années. Et j'espère que tu te diras que ça valait le coup de m'avoir laissée la chance d'espérer t'avoir à mes côtés. <br>
+            J'aimerais finir ce texte en te réitérant mon amour sans faille que je te porte, un amour si profond que je le vois manifesté partout dans la vie … 
             Chaque fleur qui pousse m'évoque les sentiments grandissants dans mon cœur. Les étoiles scintillantes constituent des phares pour les hommes dans la nuit, tout comme ton souvenir rappelle à mon âme que l'homme n'a pas été crée seul : <br>
-              <br> هُوَ ٱلَّذِى خَلَقَكُم مِّن نَّفْسٍۢ وَٰحِدَةٍۢ وَجَعَلَ مِنْهَا زَوْجَهَا لِيَسْكُنَ إِلَيْهَا
-            " C'est Lui qui vous a créés d'une personne unique et Il a tiré de celle-ci son épouse pour qu'il trouve le repos en elle " <br>
+            <br> هُوَ ٱلَّذِى خَلَقَكُم مِّن نَّفْسٍۢ وَٰحِدَةٍۢ وَجَعَلَ مِنْهَا زَوْجَهَا لِيَسْكُنَ إِلَيْهَا
+            <em>" C'est Lui qui vous a créés d'une personne unique et Il a tiré de celle-ci son épouse pour qu'il trouve le repos en elle "<em> <br>
             (Al A'raf, verset 189). <br>
             Je vois en toi une femme, une épouse et si Dieu le veut, la future mère de mes enfants. Mais je veux aussi rendre hommage à l'enfant que tu as été. J'aimerais la couvrir d'amour et lui témoigner de la considération. J'en prendrai soin, c'est une promesse, et je te ferais vivre dans une paix qui te siéra parfaitement je l'espère. <br>
-            Je t'aime Rania <3 </strong>
+            <strong>Je t'aime Rania <3 </strong>
 
             </div>
             <a href="poems.html" class="btn">Voir mes poèmes dédiés à toi</a>
         </body>
         </html>
-        `);
-    }
-    </script>
-</body>
-</html>
-
-
+    `);
+}
+</script>
