--- a/poem1.html
+++ b/poem1.html
@@ -49,6 +49,7 @@
 </head>
 <body>
     <h1>Au pied d'une feuille</h1> <!-- Titre du poème -->
+    <strong>À destination de la femme que j'aime</strong>
     <p> Dans une barque portée par le vent <br>
         Dans le souvenir préhistorique et les réminiscences du temps <br>
         Partout où je porte mon regard, je vois ton nom <br>
@@ -63,8 +64,6 @@
         Je pourfendrais par mon verbe espiègle <br>
         Les armes du temps et les larmes du « Quand ? » <br>
         Aidé par ton sourire pudique et ta beauté de paon <br>
-
-        À destination de la femme que j'aime
     </p>
     <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
 </body>
