--- a/poem1.html
+++ b/poem1.html
@@ -35,7 +35,7 @@
         a.btn {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #333; /* Bouton sombre */
+            background-color: #e91e63; /* Rose uniforme */
             color: #fff; /* Texte blanc */
             text-decoration: none; /* Supprime le soulignement */
             border-radius: 5px;
