--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function showHeartPage() {
                     padding: 10px 20px;
                     font-size: 14px;
                     color: #fff;
-                    background-color: #ff69b4
+                    background-color: #ff69b4;
                     border: none;
                     border-radius: 5px;
                     cursor: pointer;
