--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function showHeartPage() {
                     position: relative;
                     width: 80px; /* Taille réduite */
                     height: 80px;
-                    background-color: #e63946; /* Rouge passion */
+                    background-color: #ff69b4; /* Rouge passion */
                     margin-bottom: 20px;
                     transform: rotate(0); /* Cœur bien droit */
                 }
