--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function showHeartPage() {
                     position: relative;
                     width: 80px; /* Taille réduite */
                     height: 80px;
-                    background-color: #ff69b4; /* Rouge passion */
+                    background-color: #e63946; 
                     margin-bottom: 20px;
                     transform: rotate(0); /* Cœur bien droit */
                 }
@@ -103,7 +103,7 @@ function showHeartPage() {
         <body>
             <div class="heart"></div>
             <div class="poem">
-            Après quelques semaines de travail, je suis heureux de te présenter le fruit de mes efforts.<br>J'ai appris de zéro à coder un site internet afin de te faire plaisir et référencer tout les poèmes que je t'ai écrit et ceux que je t'écrirais. 
+            Après quelques semaines de travail et des dizaines d'heures passées à essayer de comprendre comment coder et lancer une page internet, je suis heureux de te présenter le fruit de mes efforts.<br>J'ai appris de zéro à coder un site internet afin de te faire plaisir et référencer tout les poèmes que je t'ai écrit et ceux que je t'écrirais. 
             Je parle au futur car notre histoire est loin d'être finie ni même réellement commencée. Elle a connu un petit arrêt afin qu'elle puisse mieux commencer.<br>Quand on sera mariés إِنْ شَاءَ ٱللَّٰهُ tu verras tout l'amour, les petites et grandes attentions que j'ai prévues pour toi. Toutes les recherches, les préparations de plans ou de vacances à deux que j'ai rêvées et organisées dans ma tête …<br> Bref, tu verras combien je t'ai portée dans mon cœur, dans mon âme et jusqu'à dans ma chair tout ces mois et toutes ces années. Et j'espère que tu te diras que ça valait le coup de m'avoir laissée la chance d'espérer t'avoir à mes côtés. <br>
             J'aimerais finir ce texte en te réitérant mon amour sans faille que je te porte, un amour si profond que je le vois manifesté partout dans la vie … 
             Chaque fleur qui pousse m'évoque les sentiments grandissants dans mon cœur. Les étoiles scintillantes constituent des phares pour les hommes dans la nuit, tout comme ton souvenir rappelle à mon âme que l'homme n'a pas été crée seul : 
