--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </div>
     <script>
+<script>
 function showHeartPage() {
     const newWindow = window.open("", "_blank");
 
@@ -39,6 +40,7 @@ function showHeartPage() {
                     background-color: #fef6f9; /* Rose pâle */
                     font-family: 'Georgia', serif;
                     text-align: center;
+                    padding: 20px;
                 }
 
                 /* Style du cœur */
@@ -46,7 +48,7 @@ function showHeartPage() {
                     position: relative;
                     width: 80px; /* Taille réduite */
                     height: 80px;
-                    background-color: #e63946; 
+                    background-color: #e63946; /* Rouge passion */
                     margin-bottom: 20px;
                     transform: rotate(0); /* Cœur bien droit */
                 }
@@ -73,10 +75,11 @@ function showHeartPage() {
 
                 /* Style du texte */
                 .poem {
-                    font-size: 16px;
+                    font-size: 15px; /* Taille légèrement réduite */
                     color: #2c3e50; /* Bleu-gris élégant */
-                    margin: 0 20px;
-                    line-height: 1.8;
+                    line-height: 1.6; /* Espacement entre les lignes */
+                    max-width: 600px; /* Limite la largeur du texte */
+                    margin: 20px auto; /* Centre et ajoute un espace autour */
                 }
 
                 /* Style du bouton */
@@ -86,7 +89,7 @@ function showHeartPage() {
                     padding: 10px 20px;
                     font-size: 14px;
                     color: #fff;
-                    background-color: #ff69b4;
+                    background-color: #ff69b4; /* Rose */
                     border: none;
                     border-radius: 5px;
                     cursor: pointer;
@@ -111,7 +114,7 @@ function showHeartPage() {
             <em>« C'est Lui qui vous a créés d'une personne unique et Il a tiré de celle-ci son épouse pour qu'il trouve le repos en elle »<em> <br>
             (Al A'raf, verset 189). <br>
             Je vois en toi une femme, une épouse et si Dieu le veut, la future mère de mes enfants. Mais je veux aussi rendre hommage à l'enfant que tu as été. J'aimerais la couvrir d'amour et lui témoigner de la considération. J'en prendrai soin, c'est une promesse, et je te ferais vivre dans une paix qui te siéra parfaitement je l'espère. <br>
-            <strong>Je t'aime Rania <3 </strong> 
+            <strong>Je t'aime Rania <3 </strong>
             </div>
             <a href="poems.html" class="btn">Voir mes poèmes dédiés à toi</a>
         </body>
@@ -119,5 +122,3 @@ function showHeartPage() {
     `);
 }
 </script>
-
-   
