--- a/poem3.html
+++ b/poem3.html
@@ -1,1 +1,72 @@
-t
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poème 1</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
+    <style>
+        /* Styles spécifiques pour les pages de poèmes */
+        body {
+            background-color: #f5f5f5; /* Fond clair agréable */
+            color: #333; /* Couleur du texte pour un bon contraste */
+            font-family: 'Georgia', serif; /* Police élégante et adaptée à un poème */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        h1 {
+            font-weight: bold; /* Titre en gras */
+            margin-bottom: 20px; /* Espacement entre le titre et le texte */
+        }
+
+        p {
+            font-style: italic; /* Texte du poème en italique */
+            line-height: 1.6; /* Espacement des lignes pour améliorer la lisibilité */
+            text-align: center;
+            margin: 0 20px 30px; /* Marges latérales pour éviter les bords serrés */
+        }
+
+        a.btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff69b4
+            color: #fff; /* Texte blanc */
+            text-decoration: none; /* Supprime le soulignement */
+            border-radius: 5px;
+            transition: background-color 0.3s ease; /* Animation pour le survol */
+        }
+
+        a.btn:hover {
+            background-color: #555; /* Couleur légèrement plus claire au survol */
+        }
+    </style>
+</head>
+<body>
+    <h1>Une esquisse pour une reine</h1> <!-- Titre du poème -->
+    <p> Je te peindrais une toile sublime <br>
+    Je la ferais pour toi mais je resterais anonyme <br>
+    Ce sera encore une fois signé ton fidèle serviteur le pusillanime <br>
+    Ce n'est pas un manque de courage <br>
+    Mais une faiblesse devant l'ouvrage <br> <br>
+
+    Comment dessiner l'Aîmée, <br>
+    Comment la chanter, <br>
+    Sans négliger un atome de sa beauté ? <br>
+
+    On essaiera mais on y parviendra pas <br>
+    On s'y reprendra, on retentera, mais inévitablement on faillira <br>
+    Comment fixer l'abscons, dire l'ineffable ? <br>
+    Quand ta beauté est plus qu'inatteignable ? <br>
+    Rania je t'aime. Mais d'un amour considérable <br>
+    L'amour inimitable, celui qui rend méconnaissable <br>
+    Celui qui rend les autres inenvisageables
+    </p>
+    <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
+</body>
+</html>
