--- a/poem4.html
+++ b/poem4.html
@@ -1,1 +1,75 @@
-r
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poème 1</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
+    <style>
+        /* Styles spécifiques pour les pages de poèmes */
+        body {
+            background-color: #f5f5f5; /* Fond clair agréable */
+            color: #333; /* Couleur du texte pour un bon contraste */
+            font-family: 'Georgia', serif; /* Police élégante et adaptée à un poème */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        h1 {
+            font-weight: bold; /* Titre en gras */
+            margin-bottom: 20px; /* Espacement entre le titre et le texte */
+        }
+
+        p {
+            font-style: italic; /* Texte du poème en italique */
+            line-height: 1.6; /* Espacement des lignes pour améliorer la lisibilité */
+            text-align: center;
+            margin: 0 20px 30px; /* Marges latérales pour éviter les bords serrés */
+        }
+
+        a.btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff69b4
+            color: #fff; /* Texte blanc */
+            text-decoration: none; /* Supprime le soulignement */
+            border-radius: 5px;
+            transition: background-color 0.3s ease; /* Animation pour le survol */
+        }
+
+        a.btn:hover {
+            background-color: #555; /* Couleur légèrement plus claire au survol */
+        }
+    </style>
+</head>
+<body>
+    <h1>Je ne t'aime pas</h1> <!-- Titre du poème -->
+    <p> Non je ne t'aime pas <br>
+    Chaque jour mon cœur pleure car il n'est pas avec toi <br>
+    Mais je te hais et eus préféré le célibat <br>
+    Que de haine dussé-je porter pour tes yeux de muscat <br>
+    Ils consument mon âme et j'eus préféré me noyer dans la Volga <br>
+    Plutôt que de vivre sans toi comme un renégat <br> <br>
+
+    Non je ne t'aime pas <br>
+    Mais moi et mes larmes emplirons les mers de tracas; <br>
+    Ton regard délicieux et tes doigts délicats <br>
+    Piètres délices d'amour vous ne m'imposerez pas votre diktat <br>
+    Je ne vous chanterais pas et ne vous vouerais pas de tanka <br>
+    Qu'elles sont horribles tes lèvres couleur grenat <br> <br>
+
+    Non je ne t'aime pas <br>
+    Mais je ne puis vivre sans toi ô médina <br>
+    Médina de mon cœur tu l'as assiégé d'un amour courtois <br>
+    Si ça ne tenait qu'à moi je t'aurais évincée toi et ton sourire narquois <br>
+    D'ailleurs que je le déteste ton rire matois <br>
+    Mais je ne peux vivre sans toi ô Rania
+    </p>
+    <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
+</body>
+</html>
