--- a/poems.html
+++ b/poems.html
@@ -49,33 +49,33 @@
         <li><a href="poem1.html">Au pied d'une feuille</a></li>
         <li><a href="poem2.html">Aldébaran</a></li>
         <li><a href="poem3.html">Une esquisse pour une reine</a></li>
-        <li><a href="poem4.html">Je ne t'aime pas/a></li>
-        <li><a href="poem5.html">Poème inconnu n°1/a></li>
-        <li><a href="poem6.html">Les flammes/a></li>
-        <li><a href="poem7.html">Un petit mot nocturne/a></li>
-        <li><a href="poem8.html">L'Œil de Samothrace/a></li>
-        <li><a href="poem9.html">D'un amour éternel/a></li>
-        <li><a href="poem10.html">Le poème intérieur/a></li>
-        <li><a href="poem11.html">Rania et les lettres dansantes/a></li>
-        <li><a href="poem12.html">Le choix ou lad écision/a></li>>
-        <li><a href="poem13.html">Les vestiges du coeur/a></li>
-        <li><a href="poem14.html">Les cascades honnies/a></li>
-        <li><a href="poem15.html">Les apostrophes sublimes/a></li>
-        <li><a href="poem16.html">Une brume enveloppe une soirée d'automne/a></li>
-        <li><a href="poem17.html">Le chemin du poète/a></li>
-        <li><a href="poem18.html">Le vicaire de l'éther/a></li>
-        <li><a href="poem19.html">Le spleen des étoiles/a></li>
-        <li><a href="poem20.html">La dame de l'Alhambra/a></li>
-        <li><a href="poem21.html">Poème inconnu n°2/a></li>
-        <li><a href="poem22.html">Le bouquet royal/a></li>
-        <li><a href="poem23.html">La vieille femme/a></li>
-        <li><a href="poem24.html">Le coeur du poète/a></li>
-        <li><a href="poem25.html">Les tulipes/a></li>
-        <li><a href="poem26.html">Le ciel et la fleur/a></li>
-        <li><a href="poem27.html">Poème inconnu n°3/a></li>
-        <li><a href="poem28.html">Un poème pour Rania/a></li>
-        <li><a href="poem29.html">L'impuissance du poète/a></li>
-        <li><a href="poem30.html">WIP/a></li>
+        <li><a href="poem4.html">Je ne t'aime pas</a></li>
+        <li><a href="poem5.html">Poème inconnu n°1</a></li>
+        <li><a href="poem6.html">Les flammes</a></li>
+        <li><a href="poem7.html">Un petit mot nocturne</a></li>
+        <li><a href="poem8.html">L'Œil de Samothrace</a></li>
+        <li><a href="poem9.html">D'un amour éternel</a></li>
+        <li><a href="poem10.html">Le poème intérieur</a></li>
+        <li><a href="poem11.html">Rania et les lettres dansantes</a></li>
+        <li><a href="poem12.html">Le choix ou la décision</a></li>>
+        <li><a href="poem13.html">Les vestiges du coeur</a></li>
+        <li><a href="poem14.html">Les cascades honnies</a></li>
+        <li><a href="poem15.html">Les apostrophes sublimes</a></li>
+        <li><a href="poem16.html">Une brume enveloppe une soirée d'automne</a></li>
+        <li><a href="poem17.html">Le chemin du poète</a></li>
+        <li><a href="poem18.html">Le vicaire de l'éther</a></li>
+        <li><a href="poem19.html">Le spleen des étoiles</a></li>
+        <li><a href="poem20.html">La dame de l'Alhambra</a></li>
+        <li><a href="poem21.html">Poème inconnu n°2</a></li>
+        <li><a href="poem22.html">Le bouquet royal</a></li>
+        <li><a href="poem23.html">La vieille femme</a></li>
+        <li><a href="poem24.html">Le coeur du poète</a></li>
+        <li><a href="poem25.html">Les tulipes</a></li>
+        <li><a href="poem26.html">Le ciel et la fleur</a></li>
+        <li><a href="poem27.html">Poème inconnu n°3</a></li>
+        <li><a href="poem28.html">Un poème pour Rania</a></li>
+        <li><a href="poem29.html">L'impuissance du poète</a></li>
+        <li><a href="poem30.html">WIP</a></li>
         
     </div>
 </body>
