--- a/poems.html
+++ b/poems.html
@@ -57,7 +57,7 @@
         <li><a href="poem9.html">D'un amour éternel</a></li>
         <li><a href="poem10.html">Le poème intérieur</a></li>
         <li><a href="poem11.html">Rania et les lettres dansantes</a></li>
-        <li><a href="poem12.html">Le choix ou la décision</a></li>>
+        <li><a href="poem12.html">Le choix ou la décision</a></li>
         <li><a href="poem13.html">Les vestiges du coeur</a></li>
         <li><a href="poem14.html">Les cascades honnies</a></li>
         <li><a href="poem15.html">Les apostrophes sublimes</a></li>
