--- a/poem7.html
+++ b/poem7.html
@@ -58,7 +58,7 @@
     Mon cœur te tend ses bras, pour te consoler et t'aimer. <br>
     Mais avant cela je te demander de me pardonner <br>
     Sois sûre de mon amour pour toi ô ma princesse <br>
-    Sois sûre de mon atachement et de ma tendresse.
+    Sois sûre de mon attachement et de ma tendresse.
     </p>
     <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
 </body>
