--- a/poem10.html
+++ b/poem10.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poème 1</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
+    <style>
+        /* Styles spécifiques pour les pages de poèmes */
+        body {
+            background-color: #f5f5f5; /* Fond clair agréable */
+            color: #333; /* Couleur du texte pour un bon contraste */
+            font-family: 'Georgia', serif; /* Police élégante et adaptée à un poème */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
 
+        h1 {
+            font-weight: bold; /* Titre en gras */
+            margin-bottom: 20px; /* Espacement entre le titre et le texte */
+        }
+
+        p {
+            font-style: italic; /* Texte du poème en italique */
+            line-height: 1.6; /* Espacement des lignes pour améliorer la lisibilité */
+            text-align: center;
+            margin: 0 20px 30px; /* Marges latérales pour éviter les bords serrés */
+        }
+
+        a.btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff69b4
+            color: #fff; /* Texte blanc */
+            text-decoration: none; /* Supprime le soulignement */
+            border-radius: 5px;
+            transition: background-color 0.3s ease; /* Animation pour le survol */
+        }
+
+        a.btn:hover {
+            background-color: #555; /* Couleur légèrement plus claire au survol */
+        }
+    </style>
+</head>
+<body>
+    <h1>Le poème intérieur</h1> <!-- Titre du poème -->
+    <p> Aimer avec le cœur c'est nier les yeux <br>
+    C'est nier la beauté qui rend l'amour périlleux <br>
+    Si je t'aime avec l'âme alors je serais élogieux <br>
+    Chaque vers vient de toi, ô œil somptueux <br>
+    Le poème est en toi Rania, mais il est insidieux <br>
+    À mesure qu'on le défile, il nous rend orgueilleux <br>
+    Je le chante alors, mais il est si mélodieux <br>
+    Pourtant il ne sera jamais suffisant et toujours oublieux <br>
+    Il négligera une de tes beautés ou ton bras affectueux <br>
+    L'orgueil est immérité et je ne devrais pas être présomptueux <br>
+    Je t'aime ô Rania mais d'un amour respectueux
+    </p>
+    <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
+</body>
+</html>
