--- a/poem18.html
+++ b/poem18.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poème 1</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
+    <style>
+        /* Styles spécifiques pour les pages de poèmes */
+        body {
+            background-color: #f5f5f5; /* Fond clair agréable */
+            color: #333; /* Couleur du texte pour un bon contraste */
+            font-family: 'Georgia', serif; /* Police élégante et adaptée à un poème */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
 
+        h1 {
+            font-weight: bold; /* Titre en gras */
+            margin-bottom: 20px; /* Espacement entre le titre et le texte */
+        }
+
+        p {
+            font-style: italic; /* Texte du poème en italique */
+            line-height: 1.6; /* Espacement des lignes pour améliorer la lisibilité */
+            text-align: center;
+            margin: 0 20px 30px; /* Marges latérales pour éviter les bords serrés */
+        }
+
+        a.btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff69b4
+            color: #fff; /* Texte blanc */
+            text-decoration: none; /* Supprime le soulignement */
+            border-radius: 5px;
+            transition: background-color 0.3s ease; /* Animation pour le survol */
+        }
+
+        a.btn:hover {
+            background-color: #555; /* Couleur légèrement plus claire au survol */
+        }
+    </style>
+</head>
+<body>
+    <h1>Le vicaire de l'éther</h1> <!-- Titre du poème -->
+    <p>Une nouvelle ère mais toujours la même paire <br>
+Un nouvel air mais toujours la même lumière <br>
+Avec amour, on jubile qu'importe le caractère <br>
+Avec admiration, on écrit inspiré qu'importe le genre littéraire <br>
+Donnez moi de la pierre ou de la terre <br>
+Donnez moi n'importe quelle matière <br>
+Et j'en ferais tout un univers <br>
+Avec mes mots j'abatterais les frontières <br>
+J'arrêterais l'hiver, la Terre sera solaire <br>
+Elle chantera mon amour pour toi ô étrangère <br>
+J'éleverais un trône ou une chaire <br>
+Qu'importe la réalité, tout est imaginaire <br>
+J'abattrais pour toi l'ordinaire, il n'y aura plus de barrière <br>
+Je chanterais des vers, je vanterais ton mystère <br>
+Chaque ligne sera d'Homère, chaque port sera un estuaire <br>
+Arrêtez moi ou je tuerais la Terre entière <br>
+Pour tes yeux ô Rania juste pour te satisfaire</p>
+    <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
+</body>
+</html>
